2024-02-24T16:16:48Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8031750052 # 146
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 2 4133
* notice: prev accum: outdated-unq outdated-all / unq all: 1950 190634 / 1970 194934
* notice: next accum: outdated-unq outdated-all / unq all: 1950 190634 / 1970 195026
* notice: prev exec diff / last date diff / accum: unq all: +0 +92 -0 -93 / +2 +203 -0 -0 / 2 203
* notice: removed / changed dates: [] / [2024-02-10 2024-02-24]

2024-02-24T08:16:16Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8029304305 # 145
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 2 4134
* notice: prev accum: outdated-unq outdated-all / unq all: 1950 190634 / 1968 194823
* notice: next accum: outdated-unq outdated-all / unq all: 1950 190634 / 1970 194934
* notice: prev exec diff / last date diff / accum: unq all: +2 +111 -0 -91 / +2 +111 -0 -0 / 2 111
* notice: removed / changed dates: [] / [2024-02-10 2024-02-24]

2024-02-24T01:01:32Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/8027033891 # 144
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-24
* notice: last 14d: unq all: 2 4114
* notice: prev accum: outdated-unq outdated-all / unq all: 1948 190334 / 1968 194727
* notice: next accum: outdated-unq outdated-all / unq all: 1950 190634 / 1968 194823
* notice: prev exec diff / last date diff / accum: unq all: +0 +96 -0 -75 / +2 +301 -0 -0 / 2 301
* notice: removed / changed dates: [2024-02-09] / [2024-02-10 2024-02-23]

2024-02-23T16:17:59Z: