@@ -1,24 +1,15 @@
 {
-  "timestamp" : "2024-02-24T16:16:48Z",
-  "count_outdated" : 190634,
-  "uniques_outdated" : 1950,
-  "count" : 195026,
+  "timestamp" : "2024-02-25T01:08:23Z",
+  "count_outdated" : 190933,
+  "uniques_outdated" : 1951,
+  "count" : 195122,
   "uniques" : 1970,
   "clones" : [
     {
-      "timestamp": "2024-02-10T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 299 ],
-      "count_decinc": [ 259, 299 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
-    {
       "timestamp": "2024-02-11T00:00:00Z",
-      "count": 299,
+      "count": 224,
       "count_minmax": [ 111, 299 ],
-      "count_decinc": [ 0, 299 ],
+      "count_decinc": [ 75, 299 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-24T00:00:00Z",
-      "count": 203,
-      "count_minmax": [ 111, 203 ],
-      "count_decinc": [ 0, 203 ],
+      "count": 299,
+      "count_minmax": [ 111, 299 ],
+      "count_decinc": [ 0, 299 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
